@@ -96,13 +96,14 @@
 (define het-group-residues het-group-residues-scm)
 (define score-rotamers score-rotamers-scm)
 (define link-info link-info-scm)
-(define kolmogorov-smirnov kolmogorov-smirnov-scm)
-(define kullback-liebler kullback-liebler-scm)
-(define chain-fragments chain-fragments-scm)
-(define find-blobs find-blobs-scm)
-(define morph-fit-residues morph-fit-residues-scm)
-(define density-score-residue density-score-residue-scm)
+(define kolmogorov-smirnov     kolmogorov-smirnov-scm)
+(define kullback-liebler       kullback-liebler-scm)
+(define chain-fragments        chain-fragments-scm)
+(define find-blobs             find-blobs-scm)
+(define morph-fit-residues     morph-fit-residues-scm)
+(define density-score-residue  density-score-residue-scm)
 (define align-to-closest-chain align-to-closest-chain-scm)
+(define map-statistics         map-statistics)
 
 ;; I changed the function name - save those (just a few) with scripts that I've handed out
 (define toggle-idle-ligand-interactions toggle-flev-idle-ligand-interactions)
